Update project to integrate ViaCEP API with BrasilAPI
- Updated tests to reflect new integration
- Refactored custom exceptions for enhanced error handling
- Updated domain objects for compatibility with BrasilAPI
- Added RestClient tests for improved API interaction coverage